--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "enudge",
+  "name": "eNudge",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --host 0.0.0.0 --port 8080 --publicHost enudge-kbdick.c9users.io",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -12,18 +12,26 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.1.0",
+    "@angular/cdk": "^6.2.0",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
+    "@angular/fire": "^5.0.0",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
     "@angular/material": "^6.4.7",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^3.2.0",
+    "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
+    "angularfire2": "^5.0.1",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
-    "rxjs": "~6.2.0",
+    "firebase": "^5.4.2",
+    "ngx-bootstrap": "^3.0.1",
+    "rxjs": "^6.2.2",
+    "rxjs-compat": "^6.3.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
