--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --port 8080 --publicHost enudge-kbdick.c9users.io",
-    "build": "ng build",
+    "build": "$ ng build --prod --base-href "https://kbdick.github.io/enudge",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -25,10 +25,11 @@
     "@angular/router": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "^3.2.0",
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
-    "angularfire2": "^5.0.1",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "d3": "^5.7.0",
     "firebase": "^5.4.2",
+    "firebase-admin": "^6.0.0",
     "ngx-bootstrap": "^3.0.1",
     "rxjs": "^6.2.2",
     "rxjs-compat": "^6.3.2",
@@ -39,6 +40,7 @@
     "@angular/cli": "~6.2.1",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
+    "@types/d3": "^5.0.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
