--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "d3": "^5.7.0",
     "firebase": "^5.5.8",
     "firebase-admin": "^6.1.0",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.3.1",
     "ngx-bootstrap": "^3.1.1",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
