--- a/angular.json
+++ b/angular.json
@@ -83,6 +83,11 @@
               },
               "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/styles/global"
+              ]
+            },
             "scripts": [],
             "assets": [
               "src/favicon.ico",
