--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
-/environments
-/secrets
-/e2e
+/src/environments
+/scr/secrets
+/src/e2e
 /public
 
 # compiled output
