--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 /src/environments
-/scr/secrets
-/src/e2e
-/public
+secrets
+e2e
 
 # compiled output
 /dist
@@ -25,6 +24,7 @@
 .firebaserc
 .gitignore
 firebase-debug.log
+.firebase
 
 
 # IDE - VSCode
