--- a/package.json
+++ b/package.json
@@ -12,35 +12,33 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.2.4",
-    "@angular/cdk": "^7.3.1",
+    "@angular/cdk": "^7.3.2",
     "@angular/common": "^7.2.4",
-    "@angular/compiler": "^7.2.4",
+    "@angular/compiler": "^7.2.6",
     "@angular/core": "^7.2.4",
     "@angular/fire": "^5.1.0",
     "@angular/forms": "^7.2.4",
     "@angular/http": "^7.2.4",
-    "@angular/material": "^7.3.1",
+    "@angular/material": "^7.3.2",
     "@angular/platform-browser": "^7.2.4",
     "@angular/platform-browser-dynamic": "^7.2.4",
+    "@angular/pwa": "^0.12.1",
     "@angular/router": "^7.2.4",
-    "@ng-bootstrap/ng-bootstrap": "^4.0.2",
-    "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
-    "bootstrap": "^4.1.3",
+    "@angular/service-worker": "~7.2.4",
     "core-js": "^2.5.4",
-    "d3": "^5.7.0",
     "firebase": "^5.5.8",
     "firebase-admin": "^7.0.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
-    "ngx-bootstrap": "^3.1.1",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
+    "update": "^0.7.4",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.0",
+    "@angular-devkit/build-angular": "^0.13.3",
     "@angular/cli": "^7.3.0",
-    "@angular/compiler-cli": "^7.2.4",
+    "@angular/compiler-cli": "^7.2.6",
     "@angular/language-service": "^7.2.4",
     "@types/d3": "^5.0.1",
     "@types/jasmine": "^3.3.8",
@@ -50,7 +48,7 @@
     "codelyzer": "~4.5.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
+    "karma": "^4.0.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
