--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --port 8080 --disableHostCheck",
-    "build": "ng build --prod --base-href '/enudge/enudge/'",
+    "build": "ng build --prod --base-href '/enudge/'",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
