--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0 --port 8080 --disableHostCheck",
+    "start": "ng serve --host 0.0.0.0 --port 8080 --disableHostCheck --aot",
     "build": "ng build --prod --base-href '/enudge/'",
     "test": "ng test",
     "lint": "ng lint",
