--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --port 8080 --disableHostCheck --aot",
     "build": "ng build --prod --base-href '/enudge/'",
+    "deploy": "npx angular-cli-ghpages --dir=dist/enudge",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
