--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "e2i",
-  "version": "0.0.1",
+  "name": "eNudge",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --port 8080 --disableHostCheck --aot",
-    "build": "ng build --prod --base-href '/e2i/'",
-    "deploy": "npx angular-cli-ghpages --dir=dist/e2i",
+    "build": "ng build --prod --base-href '/enudge/'",
+    "deploy": "npx angular-cli-ghpages --dir=dist/enudge",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -39,7 +39,7 @@
     "firebase-admin": "^7.0.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "jquery": "^3.4.1",
+    "jquery": "^3.3.1",
     "rxjs": "^6.5.2",
     "rxjs-compat": "^6.5.2",
     "update": "^0.7.4",
